# MSc_Thesis_Final

Benchmarks_Chapter3/: CMakeLists.txt  crtp_class.hpp  crtp_main.cpp  normal_class.hpp  slowpath_h.h  slowpath_main.cpp  type_engineering.cpp
Branch_min_v1/: Asset.cpp  Asset.h  Exception.h  main.cpp
Branch_min_v2/: Asset.h  CMakeLists.txt  Tick.h  main.cpp
Exceptions/: Asset.cpp  Tick.cpp  main.cpp
If_order/: Asset.cpp  CMakeLists.txt  Tick.cpp  Tick.h  main.cpp
memory_alloc/: Asset.cpp  Asset.h  Tick.cpp  main.cpp  main_originial.cpp  my_nasdaq.txt
pair_algo_standard/: Asset.cpp  Asset.h  CMakeLists.txt  Exception.cpp  Tick.cpp  Tick.h  main.cpp  main_slow.cpp  my_sp500.txt
